[package]
name = "quadder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui-macroquad = "0.12.0"
serde = {version = "1.0.142", features = ["derive"]}
serde_json = "1.0.83"
dirs = "4.0.0"
cookie = "0.16"
reqwest = "0.11.12"
url = "2.3.1"
pollster = "0.2.5"
async-oauth2 = "0.4.0"
oneshot = "0.1.5"
anyhow = "1.0.65"
jinxapi-github = "0.2.6"